--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "pinia": "^2.0.34",
     "vue": "^3.2.47",
+    "vue-router": "^4.1.6",
     "vue-window-size": "^2.0.0"
   },
   "devDependencies": {
