--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.5",
     "pinia": "^2.0.34",
     "vue": "^3.2.47",
     "vue-window-size": "^2.0.0"
