--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
   },
   "dependencies": {
     "@tanstack/vue-query": "^4.29.1",
+    "@types/node": "^18.15.11",
+    "@types/path-browserify": "^1.0.0",
+    "@vue/tsconfig": "^0.1.3",
     "axios": "^1.3.5",
+    "path": "^0.12.7",
+    "path-cross": "^1.0.4",
     "pinia": "^2.0.34",
+    "url": "^0.11.0",
+    "vite-tsconfig-paths": "^4.2.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
     "vue-window-size": "^2.0.0"
