--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,5 +6,6 @@
     "allowSyntheticDefaultImports": true,
     "strict": true
   },
-  "include": ["vite.config.ts"]
+  "include": ["vite.config.ts"],
+  "extends": "@vue/tsconfig/tsconfig.node.json"
 }
