--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,6 +6,5 @@
     "allowSyntheticDefaultImports": true,
     "strict": true
   },
-  "include": ["vite.config.ts"],
-  "extends": "@vue/tsconfig/tsconfig.node.json"
+  "include": ["vite.config.ts", "@vue/tsconfig/tsconfig.node.json"]
 }
