--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "url": "^0.11.0",
     "vite-tsconfig-paths": "^4.2.0",
     "vue": "^3.2.47",
+    "vue-query": "^1.26.0",
     "vue-router": "^4.1.6",
     "vue-window-size": "^2.0.0"
   },
